# gpis-touch-public

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: GPShape.hpp  contours.hpp  get_shapes.hpp  kdtree_eigen.h  matplotlibcpp.h  meshgrid.hpp
cpp/src/: GPShape.cpp  contours.cpp  get_shapes.cpp
data/: get_contacts.py  helpers.py
data/contacts/: contacts-butter-20200115-2213.txt  contacts-ellip2-20200115-2208.txt  contacts-ellip2-20200213-1445.txt  contacts-ellip2-20200506-2345.txt  contacts-rect1-20200115-1026.txt  contacts-rect1-20200131-1608.txt  contacts-rect1-20200419-0028.txt  contacts-rect1-20200810-1616.txt  contacts-rect1-20200810-1811.txt  contacts-rect1-20200831-1244.txt  contacts-rect1-20200831-1248.txt
data/shapes/butter/: butter.mat  butter.txt
data/shapes/c_vals/: EllipsoidApproxLimitSurface.m  LimitSurface.m  getCVals.m
data/shapes/c_vals/Mesh2dv24/: meshdemo.m  meshfaces.m  mytsearch.m
data/shapes/c_vals/tools/: divideObjectData.m  divideObjectMesh2DData.m  integrand.m  isConvex.m  mfIntegral_matlab.m  tessquadhack.m
data/shapes/circle/: circle.mat  get_circle.m
data/shapes/ellip/: ellip1.mat  ellip2.mat  ellip3.mat  get_ellip1.m  get_ellip2.m  get_ellip3.m
data/shapes/hex/: get_hex.m  hex.mat
data/shapes/rect/: get_rect1.m  get_rect2.m  get_rect3.m  get_steel.m  rect1.mat  rect2.mat  rect3.mat  steel.mat
data/shapes/tri/: get_tri1.m  get_tri2.m  get_tri3.m  tri1.mat  tri2.mat  tri3.mat
matlab/: GPshape.m  vizShape.m
matlab/standalone/gp/: GPFiltering2D.m  KernelFun2D.m  ShapeModeling.m  evaluateAndPlot.m
matlab/standalone/utils/: center_and_normalize_data.m  offset_and_scale_data.m  plotContactsAndNormals.m  plotKernel.m
mex/: CMakeLists.txt  make_GPShape.m  mexGPShape.cpp  test_gp.cpp  test_kd.cpp
